# rustful-notifications

./: .gitignore  Cargo.toml  README.md  cal.sh  cal.txt  notify
events/: 2020-01-20.json
src/: file.json  googlecal.rs  lib.rs  main.rs  main2.rs  main3.rs  service.sh  todo.json  todo.txt
