[package]
name = "notify"
version = "0.1.0"
authors = ["Gabe <finkegabriel>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
serde_derive = "1.0.104"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
chrono = "0.4.6"
date_time = "2.0.0"
google-calendar3 = "*"
hyper = "^0.10"
hyper-rustls = "^0.6"
yup-oauth2 = "^1.0"